force-app/main/default/objects/Warehouse__c/Warehouse__c.object-meta.xml
<CustomObject>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>