force-app/main/default/objects/Warehouse__c/fields/Capacity_of_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Capacity_of_Warehouse__c</fullName>
    <label>Capacity of Warehouse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>