force-app/main/default/objects/Warehouse__c/fields/Company_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Company_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Warehouse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Warehouse__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Dealers Warehouse</relationshipLabel>
    <relationshipName>DealersWarehouse</relationshipName>
    <type>Lookup</type>
</CustomField>