force-app/main/default/objects/Warehouse__c/fields/Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warehouse</relationshipLabel>
    <relationshipName>Warehouse</relationshipName>
    <type>Lookup</type>
</CustomField>