force-app/main/default/objects/Warehouse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Manager__c</columns>
    <columns>Company_Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>